--- a/stanford_sql_exercises.ipynb
+++ b/stanford_sql_exercises.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Untitled.Rmd  Untitled.ipynb  colleges.db\r\n"
+      "colleges.db\t       stanford_sql_exercises.Rmd\r\n",
+      "movies_and_ratings.db  stanford_sql_exercises.ipynb\r\n"
      ]
     }
    ],
@@ -19,18 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
     "import pandas as pd\n",
-    "conn = sqlite3.connect(\"colleges.db\")"
+    "conn = sqlite3.connect('movies_and_ratings.db')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -65,128 +66,58 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>table</td>\n",
-       "      <td>College</td>\n",
-       "      <td>College</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Movie</td>\n",
        "      <td>2</td>\n",
-       "      <td>CREATE TABLE College(cName text, state text, e...</td>\n",
+       "      <td>CREATE TABLE Movie(mID int, title text, year i...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>table</td>\n",
-       "      <td>Student</td>\n",
-       "      <td>Student</td>\n",
+       "      <td>Reviewer</td>\n",
+       "      <td>Reviewer</td>\n",
        "      <td>3</td>\n",
-       "      <td>CREATE TABLE Student(sID int, sName text, GPA ...</td>\n",
+       "      <td>CREATE TABLE Reviewer(rID int, name text)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>table</td>\n",
-       "      <td>Apply</td>\n",
-       "      <td>Apply</td>\n",
+       "      <td>Rating</td>\n",
+       "      <td>Rating</td>\n",
        "      <td>4</td>\n",
-       "      <td>CREATE TABLE Apply(sID int, cName text, major ...</td>\n",
+       "      <td>CREATE TABLE Rating(rID int, mID int, stars in...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    type     name tbl_name  rootpage  \\\n",
-       "0  table  College  College         2   \n",
-       "1  table  Student  Student         3   \n",
-       "2  table    Apply    Apply         4   \n",
+       "    type      name  tbl_name  rootpage  \\\n",
+       "0  table     Movie     Movie         2   \n",
+       "1  table  Reviewer  Reviewer         3   \n",
+       "2  table    Rating    Rating         4   \n",
        "\n",
        "                                                 sql  \n",
-       "0  CREATE TABLE College(cName text, state text, e...  \n",
-       "1  CREATE TABLE Student(sID int, sName text, GPA ...  \n",
-       "2  CREATE TABLE Apply(sID int, cName text, major ...  "
+       "0  CREATE TABLE Movie(mID int, title text, year i...  \n",
+       "1          CREATE TABLE Reviewer(rID int, name text)  \n",
+       "2  CREATE TABLE Rating(rID int, mID int, stars in...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_sql_query(\"select * from sqlite_master where type='table';\", conn)"
+    "pd.read_sql_query(\"select * from sqlite_master where type = 'table'\", conn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cName</th>\n",
-       "      <th>state</th>\n",
-       "      <th>enrollment</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Stanford</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>15000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Berkeley</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>36000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MIT</td>\n",
-       "      <td>MA</td>\n",
-       "      <td>10000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Cornell</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>21000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      cName state  enrollment\n",
-       "0  Stanford    CA       15000\n",
-       "1  Berkeley    CA       36000\n",
-       "2       MIT    MA       10000\n",
-       "3   Cornell    NY       21000"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.read_sql_query('select * from College limit 5', conn)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
